<resources>
    <string name="app_name">PhotographerBooking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="application_name">Linslus</string>
    <string name="example_content">Example Content</string>
    <string name="image">image</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_username">Type your username</string>
    <string name="enter_email">Type your email</string>
    <string name="enter_password">Type your password</string>
    <string name="enter_confirm_password">Type confirm password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forget_password"><u>Forget password?</u></string>
    <string name="remember_me">Remember me</string>
    <string name="or_login_with">- or login with -</string>
    <string name="no_account">No account yet?</string>
    <string name="create_one"><u>Create one</u></string>
    <string name="already_account">Already have an account?</string>
    <string name="login_with_us"><u>Login with us</u></string>
    <string name="forgot_password">Forget password</string>
    <string name="type_email">Type your email</string>
    <string name="send">Send</string>
    <string name="email_instruction">No worries! Enter your email and we will send you a reset.</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_instruction">Enter your information below to sign up with us</string>
    <string name="space">\u0020</string>
    <string name="app_icon">Application icon</string>
    <string name="follow">Follow</string>
    <string name="experience_years">Years of experience</string>
    <string name="specialize">I specialize in</string>
    <string name="favorite_spot">My favorite spot to shoot in the city is…</string>
    <string name="service_category">Service Categories</string>
    <string name="not_available">Not available</string>
    <string name="personal_shoot">Personal photo shoots starting at</string>
    <string name="commercial_shoot">Commercial photo shoots starting at</string>
    <string name="event_shoot">Event photography starting at</string>
    <string name="per_session">per session</string>
    <string name="per_day">per day</string>
    <string name="per_hour">per hour</string>
    <string name="specialization_1">Product Photography, Fashion,<br />Business headshots, Portraits,<br />Food<br />Fitness Photos for Personal Trainers,<br />Promotional Photos for Social media</string>
    <string name="spot_1">Wellington Point, The LightHouse Raby Bay</string>
    <string name="chat">Chat</string>
    <string name="booking">Booking</string>
    <string name="portfolio">Portfolio</string>
    <string name="speciality_album">Speciality Album</string>
    <string name="see_all_albums"><u>All albums</u> ></string>
    <string name="see_all_reviews"><u>All reviews</u> ></string>
    <string name="see_all_services"><u>All services</u> -></string>
    <string name="rating_and_reviews">Rating and Reviews</string>
    <string name="review_number">29 Reviews</string>
    <string name="rating_example">4.6</string>
    <string name="comment_owner">Owner</string>
    <string name="sample_comment">Photographer A chup dep qua</string>
    <string name="service_name">Marketing Photo Service</string>
    <string name="service_price">$80.99</string>
    <string name="service_rate">4.5</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="price_per">Price per hour</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_booking_info">BookingInfo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cancel_reason">Reason</string>
    <string name="view_all"><u>View all ></u></string>
</resources>