<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".authentication.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="38sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvInvalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_content"
            android:textColor="@color/red"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="40dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="40dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/blue_1"
            android:layout_marginTop="10dp"
            android:textAlignment="viewEnd"
            android:layout_marginHorizontal="40dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_login_with"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="25dp"
                app:srcCompat="@drawable/facebook"
                android:contentDescription="@string/image" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginHorizontal="25dp"
                app:srcCompat="@drawable/google"
                android:contentDescription="@string/image" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_one"
                android:textSize="16sp"
                android:paddingBottom="3dp"
                android:textColor="@color/blue_1"
                android:paddingHorizontal="5dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>