<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        style="@style/circle_shape"
        android:layout_height="250dp">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.synnapps.carouselview.CarouselView
                style="@style/circle_shape"
                android:id="@+id/rvServiceImages"
                app:fillColor="#FFFFFFFF"
                app:pageColor="#00000000"
                app:radius="6dp"
                app:slideInterval="0"
                app:autoPlay="false"
                app:pageTransformer="slide_over"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp"
                app:snap="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:translationX="-10dp"
                android:translationY="10dp" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </com.google.android.material.card.MaterialCardView>
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="266dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RatingBar
                android:id="@+id/searchItemRateBar"
                android:layout_marginTop="8dp"
                android:theme="@style/MyRatingBar"
                android:rating="4"
                android:numStars="1"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvServicePoint"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:text="@string/service_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/review_number"
                android:id="@+id/tvServiceRatingDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:id="@+id/tvServiceName"
            android:text="@string/service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvServiceItemPrice"
            android:text="@string/service_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>